monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4097/A4097b.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.invalid.A4097;

grammar A4097b {
  A;
  
  astrule A astextends java.util.Observer;
}
